--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ a:hover {
 
 .service-5 {
   /* Corporate Training */
-  background-image: url("images/workshop-session3.jpg");
+  background-image: url("images/workshop-session3.jpeg");
 }
 
 .service-6 {
